Fix overflow issue

--- a/wp-content/themes/delta-child/style.css
+++ b/wp-content/themes/delta-child/style.css
@@ -133,38 +133,11 @@ Template: astra
     transition: all 0.4s ease;
 }
 
-.swiper-slide img, .swiper-slide video {
+.swiper-slide img, .swiper-slide video, .video-container {
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
-
-.media-element {
-    width: auto;
-    height: 500px;
-    max-width: 100%;
-    object-fit: contain;
-    pointer-events: none;
-}
-
-
-.video-container {
-    position: relative;
-    width: auto;
-    height: 100%;
-            /*500px;*/
-    max-width: 100%;
-    overflow: hidden;
-}
-
-
-.video-element {
-    width: 100%;
-    height: 100%;
-    object-fit: fill;
-    pointer-events: none;
-}
-
 
 .play-button, .pause-button {
     position: absolute;
